--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                 </div>
             </div>
 
+        </section>
+        <!-- what i do section start -->
+        <section>
+            <h3 id="what-i-do-des" class="section-title">What I do</h3>
+            <p class="section-des">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
 
         </section>
 
