--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
                     </div>
                 </div>
             </div>
-
+            <div class="download-cv">
+                <button class="button-primary">download cv</button>
+            </div>
         </section>
 
 
