--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Lets message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your name">
+                <input type="email" placeholder="your email" name="" id="">
+                <textarea name="" placeholder="message" id="" cols="30" rows="10"></textarea>
+                <input class="button-primary" type="submit" value="submit" id="">
+            </form>
         </div>
     </footer>
 </body>
